Tue May 29 22:49:16 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi: Document --use-lc-numeric. Document that some
	VMS systems come with an old version of gawk.

Mon May 28 08:21:51 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.1, awkcard.in: Document --use-lc-numeric.

Tue May 15 13:27:38 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi, gawk.1: Documented --disable-directories-fatal
	fatal option.

Wed May  9 21:50:44 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.1: Reviewed and updated, minor typos fixed.
	* awkcard.in: Added mention of %F.

Wed May  2 19:55:02 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi: Cleaned up discussion of string concatenation
	where needed, including a note about the mixed treatment
	of `"echo " "date" | getline'.  Sigh.

Sun Apr 29 13:33:27 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi (Time Functions): Update description of strftime
	for third utc-flag argument. Other minor fixes.
	* gawk.1, awkcard.in: Same.

Tue Apr  3 22:47:40 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi (New Ports): Update list of files for all of
	regex that should not be messed with lightly.

Wed Mar 21 09:02:53 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi: Removed last vestiges of arnold@gnu.org
	email address.

Wed Mar  7 13:06:31 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi (Getopt Function): Add a note that user level
	code must clear out ARGV from 1 to Optind.
	Thanks to Matthew.Hall1@VerizonWireless.com, from mail
	dated Tue, 02 Aug 2005 09:04:37 -0700.

Wed Mar  7 08:48:02 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi: Fix my personal email address. Sheesh.
	Thanks again to Sahak Petrosyan <petrosyan@gmail.com>.

Tue Mar  6 09:13:38 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi: Fix link to online version of the manual.
	Thanks to Sahak Petrosyan <petrosyan@gmail.com>.
