@@ -1,3 +1,10 @@
+Sun Jun 17 17:45:27 UTC 2007 Juergen Kahrs <jkahrs@users.sourceforge.net>
+
+	Sync with savannah gawk cvsps 127.
+
+	* ChangeLog, Makefile.am, awkcard.in, gawk.texi:
+	Update copyright year. Fix "make clean".
+
 Sun Jun 17 12:46:49 UTC 2007 Juergen Kahrs <jkahrs@users.sourceforge.net>
 
 	Sync with savannah gawk cvsps 123.
