@@ -20,7 +20,7 @@
 @c applies to and all the info about who's publishing this edition
 
 @c These apply across the board.
-@set UPDATE-MONTH April, 2007
+@set UPDATE-MONTH May, 2007
 @set VERSION 3.1
 @set PATCHLEVEL 6
 
